--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
   dio: ^5.4.3+1
+  easy_date_timeline: ^1.0.7
   equatable: ^2.0.5
   flutter:
     sdk: flutter
